# Projects

./: .gitignore  default.nix
classes/: README.md
classes/product_inventory/: Makefile.am  README.md  configure.ac  default.nix
classes/product_inventory/src/: Makefile.am  inventory.cpp  inventory.hpp  product.hpp
classes/product_inventory/test/: gtest.cpp
random/: README.md
random/consecutive_sequence/: .gitignore  Makefile.am  configure.ac  default.nix
random/consecutive_sequence/src/: sequence.cpp  sequence.hpp
random/consecutive_sequence/test/: gtest.cpp
text/: README.md
text/vowels/: Makefile.am  README.md  configure.ac  default.nix
text/vowels/src/: vowels.cpp  vowels.hpp
text/vowels/test/: gtest.cpp
threading/: README.md
threading/data/: Makefile.am  configure.ac  default.nix
threading/data/src/: data.cpp
threading/progress_bar/: Makefile.am  README.md  configure.ac  default.nix
threading/progress_bar/src/: download.cpp  download.hpp  main.cpp  progress.hpp
threading/progress_bar/test/: gtest.cpp
