#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([vowels], [1.0], [fake@gmail.com])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/vowels.cpp])
AC_CONFIG_SRCDIR([test/gtest.cpp])
AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([Makefile])

# Checks for programs.
AC_PROG_CXX
AC_LANG_PUSH(C++)
AX_CXX_COMPILE_STDCXX_14()
AC_LANG_POP()

# Checks for libraries.
LT_INIT

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
